e2e/lubelogger/_lib/helm-install.step.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: helm-install
  labels:
    chart: lubelogger
spec:
  bindings:
    - name: chart
      value: ../../../charts/lubelogger
  try:
    - script:
        env:
          - name: CHART
            value: ($chart)
          - name: NAME
            value: ($namespace)
          - name: NAMESPACE
            value: ($namespace)
          - name: ARGV
            value: ($arguments)
        content: |
          helm install "${NAME}-lubelogger" "${CHART}" \
            --namespace "${NAMESPACE}" \
            --create-namespace \
            ${ARGV}
