e2e/lubelogger/ingress/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: lubelogger-ingress
  labels:
    chart: lubelogger

spec:
  concurrent: true
  timeouts:
    cleanup: 60s

  bindings:
    - name: arguments
      value: >-
        --set=secret.emailServer=mailcatcher
        --set=secret.emailFrom=testuser@example.com
        --set=secret.port=1025
        --set=secret.username=testuser
        --set=secret.password=testpassword
        --set=ingress.enabled=true
        --set=ingress.hosts[0].host=lubelogger.local
        --set=ingress.hosts[0].paths[0].path=/
        --set=ingress.hosts[0].paths[0].pathType=ImplementationSpecific

  steps:
    - name: Install Mailcatcher
      use:
        template: ../../_lib/mailcatcher.step.yaml
        with:
          bindings:
            - name: namespace
              value: ($namespace)

    - name: Install chart
      use:
        template: ../_lib/helm-install.step.yaml
        with:
          bindings:
            - name: arguments
              value: ($arguments)
            - name: namespace
              value: ($namespace)

    - name: Validate core installation
      use:
        template: ../_lib/validate-core-installation.step.yaml
        with:
          bindings:
            - name: namespace
              value: ($namespace)

    - name: Validate Ingress
      try:
        - assert:
            resource:
              apiVersion: networking.k8s.io/v1
              kind: Ingress
              metadata:
                name: (join('-', [$namespace, 'lubelogger']))
              spec:
                rules:
                  - host: lubelogger.local
              status:
                loadBalancer:
                  ingress:
                    - {}
                    - {}
